change(`VagaController.localizarVaga`): deixa de exibir vagas deletadas e controla corretamente quem pode acessar a vaga